# ocs2

ocs2_robotic_examples/ocs2_template_model/: CMakeLists.txt  package.xml  setup.py
ocs2_robotic_examples/ocs2_template_model/config/mpc/: task.info
ocs2_robotic_examples/ocs2_template_model/include/ocs2_template_model/: InputEqualityConstraints.h  InputInequalityConstriants.h  MyInitializer.h  StateConstraints.h  SwitchedModelReferenceManager.h  TemplateModelDynamics.h  TemplateModelInterface.h  definitions.h  package_path.h.in
ocs2_robotic_examples/ocs2_template_model/src/: InputEqualityConstraints.cpp  InputInequalityConstriants.cpp  MyInitializer.cpp  StateConstraints.cpp  SwitchedModelReferenceManager.cpp  TemplateModelDynamics.cpp  TemplateModelInterface.cpp
ocs2_robotic_examples/ocs2_template_model/test/: TemplateModelNoRosIntegrationTest.cpp
ocs2_robotic_examples/ocs2_template_model_ros/: CMakeLists.txt  package.xml
ocs2_robotic_examples/ocs2_template_model_ros/include/ocs2_template_model_ros/: TemplateModelDummyVisualization.h
ocs2_robotic_examples/ocs2_template_model_ros/launch/: multiplot.launch  template_model.launch  visualize.launch
ocs2_robotic_examples/ocs2_template_model_ros/src/: DummyTemplateModelNode.cpp  TemplateDummyVisualization.cpp  TemplateModelMpcNode.cpp  TemplateModelTargetPoseCommand.cpp
ocs2_ros_interfaces/src/mpc/: MPC_ROS_Interface.cpp
ocs2_sqp/ocs2_sqp/src/: TimeDiscretization.cpp
